kubernetes/03_app-naise_service.yaml
apiVersion: v1
kind: Service
metadata:
  managedFields:
  - apiVersion: v1
  name: app-naise
  namespace: naise
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: app-naise
    nodePort: 32001
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: app-naise
  sessionAffinity: None
  type: NodePort
