kubernetes/03_grafana-naise_service.yaml
apiVersion: v1
kind: Service
metadata:
  managedFields:
  - apiVersion: v1
  name: grafana-naise
  namespace: naise
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: grafana-naise
    nodePort: 32002
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: grafana-naise
  sessionAffinity: None
  type: NodePort
