kubernetes/03_nodered-naise_service.yaml
apiVersion: v1
kind: Service
metadata:
  managedFields:
  - apiVersion: v1
  name: nodered-naise
  namespace: naise
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: nodered-naise
    nodePort: 32004
    port: 1880
    protocol: TCP
    targetPort: 1880
  selector:
    app: nodered-naise
  sessionAffinity: None
  type: NodePort
